mType/tests/testFiles/cast/error/genericTypeMismatchCast.mt
// Placeholder error test for generic type mismatch
print("Generic type mismatch error test");
